--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+<div th:replace="fragments/sidebar:: sidebar"></div>
+
 <div class="container">
 
     <h3>Games of event: <span th:text="${event.name}" /> </h3>
