--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    <div th:replace="fragments/sidebar:: sidebar"></div>
+
     <div class="container">
 
         <h3>Bettors</h3>
