--- a/src/main/resources/templates/sports.html
+++ b/src/main/resources/templates/sports.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+<div th:replace="fragments/sidebar:: sidebar"></div>
+
 <div class="container">
 
     <h3>Sports of bettor: <span th:text="${bettor.name}" /> </h3>
